--- a/index.html
+++ b/index.html
@@ -1,24 +1,30 @@
-  <html lang='en'>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="HandheldFriendly" content="True">
-    <meta name="MobileOptimized" content="320">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="referrer" content="no-referrer">
-    <title>Not Availiable !</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+---
+layout: none
+title: 404 Not Found
+permalink: /404.html
+---
+
+<html>
+	<head>
+		 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 		<link rel="stylesheet" href="../style.css">
-<!-- Chrome, Firefox OS and Opera --> 
-<meta name="theme-color" content="#ff4500"> 
-<!-- Windows Phone --> 
-<meta name="msapplication-navbutton-color" content="#ff4500">
- <!-- iOS Safari --> 
-<meta name="apple-mobile-web-app-status-bar-style" content="#ff4500">
-<link rel="icon" sizes="16x16 32x32 48x48 96x96 192x192" href="//cdn1.netlify.com/img/icon.png">
-    
 </head>
 <body>
+
+<div class="container">
+  <form class="four-oh-four-form">
+    <input type="text" class="404-input">
+  </form>
+
+  <div class="terminal">
+	<p class="prompt">
+	<br><br><br>
+	<br><br><br>
+	<b>Note:</b> This site has been suspended due to inactivity. Thanks for visitinvg., Meow. <br>
+	If you want to know more then type 'kittens' and enter.</p>
+      <p class="prompt output new-output"></p>
+  </div>
+</div>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'> </script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.2/velocity.min.js'> </script>
 <script>var inputReady = true;
@@ -148,5 +154,4 @@ function resetForm(withKittens){
 	    return o;
 	};
   </script>
-</body>
-</html>
+ 
