--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<p class="prompt">
 	<br><br><br>
 	<br><br><br>
-	<b>Note:</b> This site has been suspended due to inactivity. Thanks for visitinvg., Meow. <br>
+	<b>Note:</b> This site has been suspended due to inactivity. Thanks for visiting. Meow; <br>
 	If you want to know more then type 'kittens' and enter.</p>
       <p class="prompt output new-output"></p>
   </div>
