--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 		<link rel="stylesheet" href="../style.css">
 </head>
@@ -13,9 +14,9 @@
 
   <div class="terminal">
 	<p class="prompt">
-	<br><br><br>
-	<br><br><br>
-	<b>Note:</b> This site has been suspended due to inactivity.<br> Thanks for visiting. Meow; <br><br>
+	
+	<b>Note:</b> This site has been suspended due to inactivity.<br>
+		Thanks for visiting. Meow; <br><br>
 	If you want to know more then type 'kittens' and enter.</p>
       <p class="prompt output new-output"></p>
   </div>
