--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <html>
 	<head>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=0.5">
 		 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 		<link rel="stylesheet" href="../style.css">
 </head>
@@ -48,7 +48,7 @@ $('.four-oh-four-form').on('submit', function(e){
 });
 
 function resetForm(withKittens){
-  var message = "Sorry that command is not recognized."
+  var message = "Sorry! That command is not recognized."
   var input = $('.404-input');
 
   if (withKittens){
