--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
 	
 	  <p class="prompt">
 	
-	<b>Note:</b> This site has been suspended due to inactivity.<br>
-		Thanks for visiting. Meow; <br><br>
-	If you want to know more then type 'kittens' and enter.</p>
+	<b>Note:</b> This site has been suspended due to inactivity.
+		Thanks for visiting. Meow; <br><br>	If you want to know more then type 'kittens' and enter.</p>
       <p class="prompt output new-output"></p>
   </div>
 </div>
