--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     if (!sessionStorage.returning) {
     // run only if returning not stored in sessionStorage
 
-    swal("Notice!", "This site is no longer maintained.  It will shut down on 31 Jan 2019, 08:00 GMT.         -Netlify Team", "warning");
+    swal("Notice!", "You don't have access to view pages.", "warning");
       sessionStorage.returning = true;
 } });
       </script>
