--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     if (!sessionStorage.returning) {
     // run only if returning not stored in sessionStorage
 
-    swal("Notice!", "You don't have access to view pages.", "warning");
+    swal("Notice!", "Sorry! you don't have access to view pages.", "warning");
       sessionStorage.returning = true;
 } });
       </script>
